Actualizado el composer.json con la última versión del repo oficial

--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,24 @@
     "name": "fabpot/silex-skeleton",
     "require": {
         "php": ">=5.3.3",
-        "silex/silex": "1.0.*",
-        "twig/twig": ">=1.8.0,<2.0-dev",
-        "twig/extensions": "1.0.*@dev",
-        "monolog/monolog": ">=1.0.0,<1.2-dev",
-        "symfony/browser-kit": "2.1.*",
-        "symfony/class-loader": "2.1.*",
-        "symfony/config": "2.1.*",
-        "symfony/console": "2.1.*",
-        "symfony/css-selector": "2.1.*",
-        "symfony/finder": "2.1.*",
-        "symfony/form": "2.1.*",
-        "symfony/monolog-bridge": "2.1.*",
-        "symfony/process": "2.1.*",
-        "symfony/security": "2.1.*",
-        "symfony/translation": "2.1.*",
-        "symfony/twig-bridge": "2.1.*",
-        "symfony/validator": "2.1.*",
+        "silex/silex": "~1.0",
+        "silex/web-profiler": "~1.0",
+        "symfony/browser-kit": "~2.3",
+        "symfony/class-loader": "~2.3",
+        "symfony/config": "~2.3",
+        "symfony/console": "~2.3",
+        "symfony/css-selector": "~2.3",
+        "symfony/debug": "~2.3",
+        "symfony/finder": "~2.3",
+        "symfony/form": "~2.3",
+        "symfony/monolog-bridge": "~2.3",
+        "symfony/process": "~2.3",
+        "symfony/security": "~2.3",
+        "symfony/translation": "~2.3",
+        "symfony/twig-bridge": "~2.3",
+        "symfony/validator": "~2.3",
         "doctrine/dbal": "2.2.*",
+        "twig/extensions": "1.0.*@dev",
         "twitter/bootstrap": "v2.2.2"
     },
     "minimum-stability": "dev",
